force-app/main/default/objects/Technical_Request__c/Technical_Request__c.object-meta.xml
<CustomObject>
    <description>Field Request Forms
1. -Tech request for replacement product to be shipped to Respiratory Care patients.
2.  -Account Request in SFDC, JDE, TIMS
3.  - Proposal
4. - DUP Request
5. - Demo Request
6. - Evaluation Extention Request
7. - Sales Support Request</description>
    <label>Request Form</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>