force-app/main/default/objects/Technical_Request__c/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <label>Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hoses</fullName>
            </value>
            <value>
                <fullName>103 Foot Control</fullName>
            </value>
            <value>
                <fullName>104 Foot Control</fullName>
            </value>
            <value>
                <fullName>105 Remote Control</fullName>
            </value>
            <value>
                <fullName>103 Hoses</fullName>
            </value>
            <value>
                <fullName>104/105 Hoses</fullName>
            </value>
            <value>
                <fullName>Power Cord</fullName>
            </value>
            <value>
                <fullName>104/105 Duffel Bag</fullName>
            </value>
            <value>
                <fullName>Contour Foam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>