force-app/main/default/objects/Technical_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The employee will use the look up feature to locate the patients account to populate this field.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Request Forms</relationshipLabel>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>