force-app/main/default/objects/Technical_Request__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <label>Account Address</label>
    <type>TextArea</type>
</CustomField>