force-app/main/default/objects/Technical_Request__c/fields/Account_Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Name__c</fullName>
    <description>Name of Account Executive aligned with Account</description>
    <inlineHelpText>Enter the Account Executive&apos;s first and last name</inlineHelpText>
    <label>Account Executive Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>