force-app/main/default/objects/Technical_Request__c/fields/Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number__c</fullName>
    <label>Account Phone Number</label>
    <type>Phone</type>
</CustomField>