force-app/main/default/objects/Technical_Request__c/fields/Acute_Care_Account__c.field-meta.xml
<CustomField>
    <fullName>Acute_Care_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acute Care Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Request Forms (Account)</relationshipLabel>
    <relationshipName>Request_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>