force-app/main/default/objects/Technical_Request__c/fields/Acute_Care_Approval__c.field-meta.xml
<CustomField>
    <fullName>Acute_Care_Approval__c</fullName>
    <label>RVP Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>