force-app/main/default/objects/Technical_Request__c/fields/Adapters1__c.field-meta.xml
<CustomField>
    <fullName>Adapters1__c</fullName>
    <label>Adapters</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tracheostromy Adapter</fullName>
            </value>
            <value>
                <fullName>Ventilator Adapter</fullName>
            </value>
            <value>
                <fullName>Oxygen Adapter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>