force-app/main/default/objects/Technical_Request__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <label>Attachments</label>
    <type>Url</type>
</CustomField>