force-app/main/default/objects/Technical_Request__c/fields/AVP_Approval__c.field-meta.xml
<CustomField>
    <fullName>AVP_Approval__c</fullName>
    <label>AVP Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>