force-app/main/default/objects/Technical_Request__c/fields/C3_Garment_Color__c.field-meta.xml
<CustomField>
    <fullName>C3_Garment_Color__c</fullName>
    <label>C3 Garment Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calming Black</fullName>
            </value>
            <value>
                <fullName>Camo</fullName>
            </value>
            <value>
                <fullName>Cashmire Rose</fullName>
            </value>
            <value>
                <fullName>Coastal Blue</fullName>
            </value>
            <value>
                <fullName>Color Me Purple</fullName>
            </value>
            <value>
                <fullName>Cute Camo</fullName>
            </value>
            <value>
                <fullName>Pink Camo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>