force-app/main/default/objects/Technical_Request__c/fields/C3_Garment_Size__c.field-meta.xml
<CustomField>
    <fullName>C3_Garment_Size__c</fullName>
    <label>C3 Garment Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infant Blue (16 - 19 inches)</fullName>
            </value>
            <value>
                <fullName>Infant Pink (16 - 19 inches)</fullName>
            </value>
            <value>
                <fullName>Child Small (19 - 23 inches)</fullName>
            </value>
            <value>
                <fullName>Child Medium (23-27 inches)</fullName>
            </value>
            <value>
                <fullName>Child Large (27-31 inches)</fullName>
            </value>
            <value>
                <fullName>Teen (27-31 inches and 1 inch longer than child large)</fullName>
            </value>
            <value>
                <fullName>Adult Small (31-36 inches)</fullName>
            </value>
            <value>
                <fullName>Adult Medium (36-45 inches)</fullName>
            </value>
            <value>
                <fullName>Adult Large (45-52 inches)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>