force-app/main/default/objects/Technical_Request__c/fields/Chest_Vest__c.field-meta.xml
<CustomField>
    <fullName>Chest_Vest__c</fullName>
    <label>Chest Vest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chest Vest Small (28-35 inches)</fullName>
            </value>
            <value>
                <fullName>Chest Vest Medium (35-46 inches)</fullName>
            </value>
            <value>
                <fullName>Chest Vest Large (46-61 inches)</fullName>
            </value>
            <value>
                <fullName>Chest Vest X-Large (61-67 inches)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>