force-app/main/default/objects/Technical_Request__c/fields/Circuit_1_Request__c.field-meta.xml
<CustomField>
    <fullName>Circuit_1_Request__c</fullName>
    <label>Circuit Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>