force-app/main/default/objects/Technical_Request__c/fields/Circuit_Request__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Request__c</fullName>
    <description>*Select the additional patient interface item(s) to be included with your patient circuit at no charge.</description>
    <inlineHelpText>*Select the additional patient interface item(s) to be included with your patient circuit at no charge.</inlineHelpText>
    <label>*Circuit Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>