force-app/main/default/objects/Technical_Request__c/fields/Classic_Garment__c.field-meta.xml
<CustomField>
    <fullName>Classic_Garment__c</fullName>
    <label>Classic Garment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Small Short (19 - 23 inches)</fullName>
            </value>
            <value>
                <fullName>Adult X-Large (52-60 inches)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>