force-app/main/default/objects/Technical_Request__c/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <label>Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bacterial/Viral Filter</fullName>
            </value>
            <value>
                <fullName>Hose</fullName>
            </value>
            <value>
                <fullName>Adaptor</fullName>
            </value>
            <value>
                <fullName>Mouthpiece</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>