force-app/main/default/objects/Technical_Request__c/fields/Contact_Name_and_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_and_Title__c</fullName>
    <label>Contact Name and Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>