force-app/main/default/objects/Technical_Request__c/fields/CS_Garment_Color__c.field-meta.xml
<CustomField>
    <fullName>CS_Garment_Color__c</fullName>
    <label>CS Garment Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calming Black</fullName>
            </value>
            <value>
                <fullName>Coastal Blue</fullName>
            </value>
            <value>
                <fullName>Cashmere Rose</fullName>
            </value>
            <value>
                <fullName>Color Me Purple</fullName>
            </value>
            <value>
                <fullName>Cool Camo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>