force-app/main/default/objects/Technical_Request__c/fields/Demo_Equipment_Requested__c.field-meta.xml
<CustomField>
    <fullName>Demo_Equipment_Requested__c</fullName>
    <inlineHelpText>Only use if requesting a new Demo System</inlineHelpText>
    <label>Demo Equipment Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>105 Vest System</fullName>
            </value>
            <value>
                <fullName>MetaNeb 4.0 System</fullName>
            </value>
            <value>
                <fullName>VitalCough System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>