force-app/main/default/objects/Technical_Request__c/fields/Director_of_Business_and_Sales_Operation__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Business_and_Sales_Operation__c</fullName>
    <label>Dir of Business and Sales Ops</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>