force-app/main/default/objects/Technical_Request__c/fields/Director_of_US_Sales_Approval__c.field-meta.xml
<CustomField>
    <fullName>Director_of_US_Sales_Approval__c</fullName>
    <label>Director of US Sales Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>