force-app/main/default/objects/Technical_Request__c/fields/Emailed_From__c.field-meta.xml
<CustomField>
    <fullName>Emailed_From__c</fullName>
    <label>Emailed From</label>
    <type>Email</type>
</CustomField>