force-app/main/default/objects/Technical_Request__c/fields/Equipment_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Contact_Name__c</fullName>
    <label>Equipment Contact Name</label>
    <type>TextArea</type>
</CustomField>