force-app/main/default/objects/Technical_Request__c/fields/Equipment_in_Deal__c.field-meta.xml
<CustomField>
    <fullName>Equipment_in_Deal__c</fullName>
    <description>Equipment in the deal for the Capital Protection Request</description>
    <inlineHelpText>Equipment in the deal for the Capital Protection Request</inlineHelpText>
    <label>Equipment in Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MetaNeb</fullName>
            </value>
            <value>
                <fullName>Vest</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>