force-app/main/default/objects/Technical_Request__c/fields/Equipment_Location_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location_Phone_Number__c</fullName>
    <label>Equipment Location Phone Number</label>
    <type>Phone</type>
</CustomField>