force-app/main/default/objects/Technical_Request__c/fields/Equipment_locations_address_department__c.field-meta.xml
<CustomField>
    <fullName>Equipment_locations_address_department__c</fullName>
    <label>Equipment locations address/department</label>
    <type>TextArea</type>
</CustomField>