force-app/main/default/objects/Technical_Request__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>Expected Close Date of the deal in the Capital Protection Request</description>
    <inlineHelpText>Expected Close Date of the deal in the Capital Protection Request</inlineHelpText>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>