force-app/main/default/objects/Technical_Request__c/fields/Expected_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Dollar_Amount__c</fullName>
    <description>Expected dollar amount of the deal in Capital Protection Request</description>
    <inlineHelpText>Expected dollar amount of the deal in Capital Protection Request</inlineHelpText>
    <label>Expected Dollar Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>