force-app/main/default/objects/Technical_Request__c/fields/Expected_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Units__c</fullName>
    <description>Number of units expected to close in deal.</description>
    <label>Expected Number of Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>