force-app/main/default/objects/Technical_Request__c/fields/Facemask1_Size__c.field-meta.xml
<CustomField>
    <fullName>Facemask1_Size__c</fullName>
    <label>Facemask Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Adult Small</fullName>
            </value>
            <value>
                <fullName>Adult Medium</fullName>
            </value>
            <value>
                <fullName>Adult Large</fullName>
            </value>
            <value>
                <fullName>Adult Inflatable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>