force-app/main/default/objects/Technical_Request__c/fields/Full_Disposable_Garment_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Full_Disposable_Garment_Pricing__c</fullName>
    <label>Full Disposable Garment Pricing</label>
    <length>7</length>
    <type>Text</type>
</CustomField>