force-app/main/default/objects/Technical_Request__c/fields/GPO_Name_or_Price__c.field-meta.xml
<CustomField>
    <fullName>GPO_Name_or_Price__c</fullName>
    <description>GPO pricing group name or price associated with the account</description>
    <inlineHelpText>Enter the GPO Name or Price associated with the Account</inlineHelpText>
    <label>GPO Name or Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>