force-app/main/default/objects/Technical_Request__c/fields/Home_Care_Account__c.field-meta.xml
<CustomField>
    <fullName>Home_Care_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Care Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Request Forms (Home Care Account)</relationshipLabel>
    <relationshipName>Request_Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>