force-app/main/default/objects/Technical_Request__c/fields/Hoses__c.field-meta.xml
<CustomField>
    <fullName>Hoses__c</fullName>
    <label>Hoses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oxygen Inlet Hose (6 Feet)</fullName>
            </value>
            <value>
                <fullName>Oxygen Inlet Hose (20 Feet)</fullName>
            </value>
            <value>
                <fullName>Oxygen Inlet Hose (50 Feet)</fullName>
            </value>
            <value>
                <fullName>COMBO2 Air &amp; Oxygen Hose (20 Feet)</fullName>
            </value>
            <value>
                <fullName>COMBO2 Air &amp; Oxygen Hose (50 Feet)</fullName>
            </value>
            <value>
                <fullName>Oxygen Inlet Hose (10 Feet)</fullName>
                <isActive>false</isActive>
                <label>Oxygen Inlet Hose (10 Feet)</label>
            </value>
            <value>
                <fullName>Oxygen Inlet Hose (3 Feet)</fullName>
                <isActive>false</isActive>
                <label>Oxygen Inlet Hose (3 Feet)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>