force-app/main/default/objects/Technical_Request__c/fields/How_long_of_an_extension_is_required__c.field-meta.xml
<CustomField>
    <fullName>How_long_of_an_extension_is_required__c</fullName>
    <label>How long of an extension is required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>