force-app/main/default/objects/Technical_Request__c/fields/Individual_Face_Mask__c.field-meta.xml
<CustomField>
    <fullName>Individual_Face_Mask__c</fullName>
    <label>Individual Face Mask</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infant Mask</fullName>
            </value>
            <value>
                <fullName>Child Mask</fullName>
            </value>
            <value>
                <fullName>Adult Small Mask</fullName>
            </value>
            <value>
                <fullName>Adult Medium Mask</fullName>
            </value>
            <value>
                <fullName>Adult Large Mask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>