force-app/main/default/objects/Technical_Request__c/fields/Inside_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Email__c</fullName>
    <label>Inside Sales Email</label>
    <type>Email</type>
</CustomField>