force-app/main/default/objects/Technical_Request__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>Interface</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infant Mask, Mouthpiece, Breathing Hose, Adapter,Bacterial/Viral Filter</fullName>
            </value>
            <value>
                <fullName>Child Mask, Mouthpiece, Breathing Hose, Adapter, Bacterial/Viral Filter</fullName>
            </value>
            <value>
                <fullName>Adult Small Mask, Mouthpiece, Breathing Hose, Adapter Bacterial/Viral Filter</fullName>
            </value>
            <value>
                <fullName>Adult Medium Mask, Mouthpiece, Breathing Hose, Adapter, Bacterial/Viral Filter</fullName>
            </value>
            <value>
                <fullName>Adult Large Mask, Mouthpiece, Breathing Hose, Adapter, Bacterial/Viral Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>