force-app/main/default/objects/Technical_Request__c/fields/Is_the_DUP_On_Track__c.field-meta.xml
<CustomField>
    <fullName>Is_the_DUP_On_Track__c</fullName>
    <label>Is the DUP On Track?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>