force-app/main/default/objects/Technical_Request__c/fields/Is_this_the_patients_permanent_address__c.field-meta.xml
<CustomField>
    <fullName>Is_this_the_patients_permanent_address__c</fullName>
    <label>Is this the patients permanent address?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>