force-app/main/default/objects/Technical_Request__c/fields/JDE_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Number__c</fullName>
    <formula>IF(Account__c = null, Acute_Care_Account__r.JDE_External_ID__c, Account__r.JDE_External_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Number</label>
    <type>Text</type>
</CustomField>