force-app/main/default/objects/Technical_Request__c/fields/JDE_number_responsible_for_the_shortfall__c.field-meta.xml
<CustomField>
    <fullName>JDE_number_responsible_for_the_shortfall__c</fullName>
    <label>JDE number responsible for the shortfall</label>
    <length>10</length>
    <type>Text</type>
</CustomField>