force-app/main/default/objects/Technical_Request__c/fields/Life2000_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Life2000_Accessories__c</fullName>
    <label>Life2000 Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Belt Clip</fullName>
            </value>
            <value>
                <fullName>Compressor Filter Package</fullName>
            </value>
            <value>
                <fullName>Compressor Power Supply &amp; AC Cord</fullName>
            </value>
            <value>
                <fullName>O2 Regulator</fullName>
            </value>
            <value>
                <fullName>Purge Tube</fullName>
            </value>
            <value>
                <fullName>Purge Tube Connector</fullName>
            </value>
            <value>
                <fullName>Universal Circuit Connector</fullName>
            </value>
            <value>
                <fullName>Ventilator Battery Charger &amp; AC Cord</fullName>
            </value>
            <value>
                <fullName>Ventilator Carry Case &amp; Belt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>