force-app/main/default/objects/Technical_Request__c/fields/Life2000_Interface__c.field-meta.xml
<CustomField>
    <fullName>Life2000_Interface__c</fullName>
    <label>Life2000 Interface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X Small</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>