force-app/main/default/objects/Technical_Request__c/fields/List_all_serial_numbers_on_evaluation__c.field-meta.xml
<CustomField>
    <fullName>List_all_serial_numbers_on_evaluation__c</fullName>
    <label>List all serial numbers on evaluation</label>
    <type>TextArea</type>
</CustomField>