force-app/main/default/objects/Technical_Request__c/fields/List_of_Aggregate_Accounts_JDE_Numbers__c.field-meta.xml
<CustomField>
    <fullName>List_of_Aggregate_Accounts_JDE_Numbers__c</fullName>
    <label>List of Aggregate Accounts/JDE Numbers</label>
    <type>TextArea</type>
</CustomField>