force-app/main/default/objects/Technical_Request__c/fields/List_serial_numbers_on_current_contract__c.field-meta.xml
<CustomField>
    <fullName>List_serial_numbers_on_current_contract__c</fullName>
    <label>List serial numbers on current contract</label>
    <type>TextArea</type>
</CustomField>