force-app/main/default/objects/Technical_Request__c/fields/List_serial_numbers_to_add_to_DUP__c.field-meta.xml
<CustomField>
    <fullName>List_serial_numbers_to_add_to_DUP__c</fullName>
    <label>List serial numbers to add to DUP</label>
    <type>TextArea</type>
</CustomField>