force-app/main/default/objects/Technical_Request__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <description>Looks up owner&apos;s first level manager</description>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>