force-app/main/default/objects/Technical_Request__c/fields/Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous__c</fullName>
    <label>Miscellaneous</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inlet Filter</fullName>
            </value>
            <value>
                <fullName>Calibration Cap</fullName>
            </value>
            <value>
                <fullName>Power Cord</fullName>
            </value>
            <value>
                <fullName>Foot Control</fullName>
            </value>
            <value>
                <fullName>Travel Bag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>