force-app/main/default/objects/Technical_Request__c/fields/Mode_of_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transportation__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
                <default>true</default>
                <label>Ground</label>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>