force-app/main/default/objects/Technical_Request__c/fields/Monarch_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Monarch_Accessories__c</fullName>
    <label>Monarch Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>Battery Access Panel</fullName>
            </value>
            <value>
                <fullName>Power Cord/Charger</fullName>
            </value>
            <value>
                <fullName>Monarch Backpack</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>